fix linebreaks in code from tex4ht

--- a/public/stylesheets/activity.less
+++ b/public/stylesheets/activity.less
@@ -1,5 +1,10 @@
 @import 'theorems';
 
+/* tex4ht emits <br/>s inside <pre> tags anyway */
+pre {
+    white-space: normal;
+}
+
 .activity-content .learning-outcome {
     display: none;
 }
